# waterdrop

./: .dockerignore  .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: pr.yaml  quality-assurance-check.yaml
server/: asgi.py  settings.py  urls.py  wsgi.py
server/.github/workflows/: pr.yaml
